Fix overflow on course table

--- a/css/site.css
+++ b/css/site.css
@@ -80,7 +80,7 @@ nav li.active > a {
 #courses {
     width: 100%;
     min-height: 600px;
-    min-height: 80vh;
+    min-height: 85vh;
     padding-top: 50px;
     overflow-x: auto;
 }
